fixed visibility issue after unloked

--- a/Gutenberg/src/embedpress/style.scss
+++ b/Gutenberg/src/embedpress/style.scss
@@ -906,6 +906,10 @@ span.copy-tooltip {
     align-items: self-start;
 }
 
+.gutenberg-block-wraper.source-opensea {
+    display: block;
+}
+
 .wp-block-embedpress-embedpress > div {
     position: relative;
 }
